@@ -1,5 +1,10 @@
 2004-12-05  Shaun McCance  <shaunm@gnome.org>
 
+	* src/yelp-window.c:
+	- About dialog work from Luca Ferretti
+
+2004-12-05  Shaun McCance  <shaunm@gnome.org>
+
 	* data/man.xml.in:
 	- Added sections: 3f 3pm 3qt 3x
 
